<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <name>Sakai SiteStats</name>
  <groupId>org.sakaiproject</groupId>
  <artifactId>sitestats-base</artifactId>
  <version>2.0-SNAPSHOT</version><!-- sitestats.version --> 
  
  <description>SiteStats is a tool for Sakai for showing site usage statistics.</description>
  <url>http://bugs.sakaiproject.org/confluence/display/STAT</url>
  <inceptionYear>2006</inceptionYear>
  <organization>
    <name>Universidade Fernando Pessoa</name>
    <url>http://www.ufp.pt</url>
  </organization>
  <packaging>pom</packaging>  
  
  
  <!-- Parent: Sakai master pom -->
  <parent>
    <artifactId>master</artifactId>
    <groupId>org.sakaiproject</groupId>
    <!-- EDIT ME: Sakai Version -->
    <!--<version>2.5.2</version>--> <!-- For Official Releases -->    
    <!--<version>M2</version>--> <!-- For 2.5.x --> 
    <version>2.6.0RC1-SNAPSHOT</version> <!-- For TRUNK -->   
  </parent>
  

  <!-- Project versions -->
  <properties>
    <entitybroker.version>[1.3.5-SNAPSHOT,1.4.0]</entitybroker.version>
    <commons-digester.version>1.6</commons-digester.version>
    <commons-betwixt.version>0.8</commons-betwixt.version>
    <commons-codec.version>1.3</commons-codec.version>
    <commons-collection.version>3.1</commons-collection.version>
    <easymock.version>2.4</easymock.version>
    <hsqldb.version>1.8.0.7</hsqldb.version>
    <dom4j.version>1.6.1</dom4j.version>
    <jta.version>h2.1.8</jta.version>
    <cglib-nodep.version>2.1_3</cglib-nodep.version>
    <fop.version>0.95</fop.version>
    <poi.version>2.0-final-20040126</poi.version>
    <jfreechart.version>1.0.5</jfreechart.version>
    <sst.wicket.version>1.3.5</sst.wicket.version>
    <sst.slf4j.version>1.4.3</sst.slf4j.version>
  </properties>
  
  
  <!-- Project modules -->
  <modules>
    <module>sitestats-api</module>
    <module>sitestats-impl</module>
    <module>sitestats-impl-hib</module>
    <module>sitestats-pack</module>
    <module>sitestats-tool</module>
  </modules>
  
  
  <!-- Project developers -->
  <developers>
    <developer>
      <id>nuno</id>
      <name>Nuno Fernandes</name>
      <email>nuno@ufp.edu.pt</email>
      <url>http://confluence.sakaiproject.org/confluence/display/~nfernandes</url>
      <organization>Universidade Fernando Pessoa</organization>
      <organizationUrl>http://www.ufp.pt/</organizationUrl>
      <roles>
        <role>Project Manager</role>
        <role>Architect</role>
        <role>Developer</role>
      </roles>
      <timezone>0</timezone>
    </developer>
  </developers>
  
  
  <!-- Project repositories -->
  <repositories>
    <repository>
      <id>sakai-maven</id>
      <name>Sakai Maven Repo</name>
      <layout>default</layout>
      <url>http://source.sakaiproject.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      </repository>
    <repository>
      <id>default</id>
      <name>Maven Repository Switchboard</name>
      <layout>default</layout>
      <url>http://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jboss</id>
      <name>Jboss Repository for Maven</name>
      <layout>default</layout>
      <url>http://repository.jboss.com/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>org.wicketstuff</id>
      <name>Wicket Stuff Repository</name>
      <url>http://wicketstuff.org/maven/repository</url>
    </repository>
  </repositories>

  
  <!-- JIRA -->
  <issueManagement>
    <system>JIRA</system>
    <url>http://jira.sakaiproject.org/jira/browse/STAT</url>
  </issueManagement>


  <!-- License -->
  <licenses>
    <license>
      <name>Educational Community License, Version 2.0</name>
      <url>http://www.osedu.org/licenses/ECL-2.0</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  
  <!-- Source code repository location -->
  <scm>
    <connection>scm:svn:https://source.sakaiproject.org/contrib/ufp/sitestats/trunk</connection>
    <developerConnection>scm:svn:https://source.sakaiproject.org/contrib/ufp/sitestats/trunk</developerConnection>
    <url>http://source.sakaiproject.org/viewsvn/ufp/sitestats/?root=contrib</url>
  </scm>

  
  <!-- Project related dependencies -->
  <dependencyManagement>
    <dependencies>
    <!-- SiteStats -->
    <dependency>
      <groupId>org.sakaiproject</groupId>
      <artifactId>sakai-sitestats-api</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.sakaiproject</groupId>
      <artifactId>sakai-sitestats-impl</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>org.sakaiproject</groupId>
      <artifactId>sakai-sitestats-impl-hib</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
  
    <!-- Sakai -->
    <!-- Pre K1 Sakai deps -->
    <!--    
    <dependency>
      <groupId>org.sakaiproject.entitybroker</groupId>
      <artifactId>entitybroker-api</artifactId>
      <version>${entitybroker.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.sakaiproject</groupId>
      <artifactId>sakai-util</artifactId>
      <version>${sakai.version}</version>
    </dependency>
    -->
    
    <!-- Apache Commons -->
    <dependency>
      <groupId>commons-digester</groupId>
      <artifactId>commons-digester</artifactId>
      <version>${commons-digester.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-betwixt</groupId>
      <artifactId>commons-betwixt</artifactId>
      <version>${commons-betwixt.version}</version>
    </dependency>
    
    <!-- Apache others -->
    <dependency>
      <groupId>org.apache.xmlgraphics</groupId>
      <artifactId>fop</artifactId>
      <version>${fop.version}</version>
    </dependency>
    <dependency>
      <groupId>poi</groupId>
      <artifactId>poi</artifactId>
      <version>${poi.version}</version>
    </dependency>

    <!-- Apache Wicket -->
    <dependency>
      <groupId>org.apache.wicket</groupId>
      <artifactId>wicket</artifactId>
      <version>${sst.wicket.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.wicket</groupId>
      <artifactId>wicket-extensions</artifactId>
      <version>${sst.wicket.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.wicket</groupId>
      <artifactId>wicket-ioc</artifactId>
      <version>${sst.wicket.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.wicket</groupId>
      <artifactId>wicket-spring</artifactId>
      <version>${sst.wicket.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.wicket</groupId>
      <artifactId>wicket-spring-annot</artifactId>
      <version>${sst.wicket.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.wicket</groupId>
      <artifactId>wicket-datetime</artifactId>
      <version>${sst.wicket.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${sst.slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>${sst.slf4j.version}</version>
    </dependency>
    
    <!-- JFreeChart -->
    <dependency>
      <groupId>jfree</groupId>
      <artifactId>jfreechart</artifactId>
      <version>${jfreechart.version}</version>
    </dependency>
    
    <!-- Testing dependencies -->
    <dependency>
      <groupId>${sakai.spring.groupId}</groupId>
      <artifactId>${sakai.spring.mock.artifactId}</artifactId>
      <version>${sakai.spring.mock.version}</version>
    </dependency>
    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>${hsqldb.version}</version>
    </dependency>
    <dependency>
      <groupId>dom4j</groupId>
      <artifactId>dom4j</artifactId>
      <version>${dom4j.version}</version>
    </dependency>
    <dependency>
      <groupId>jta</groupId>
      <artifactId>jta</artifactId>
      <version>${jta.version}</version>
    </dependency>
    <dependency>
      <groupId>cglib</groupId>
      <artifactId>cglib-nodep</artifactId>
      <version>${cglib-nodep.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>${commons-codec.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-collections</groupId>
      <artifactId>commons-collections</artifactId>
      <version>${commons-collection.version}</version>
    </dependency>
    <dependency>
      <groupId>${sakai.ehcache.groupId}</groupId>
      <artifactId>${sakai.ehcache.artifactId}</artifactId>
      <version>${sakai.ehcache.version}</version>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymock</artifactId>
      <version>${easymock.version}</version>
    </dependency>
    <dependency>
      <groupId>org.easymock</groupId>
      <artifactId>easymockclassextension</artifactId>
      <version>${easymock.version}</version>
    </dependency>
    <dependency>
      <groupId>org.sakaiproject</groupId>
      <artifactId>sakai-mock</artifactId>
      <version>${sakai.version}</version>
    </dependency>
    
    </dependencies>
  </dependencyManagement>
  
  
  <!-- Reporting (mvn site) -->
  <reporting>
    <plugins>
      <!-- JavaDocs: mvn javadoc:javadoc -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <aggregate>true</aggregate>
          <source>1.5</source>
          <links>
            <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
            <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
          </links>
          <breakiterator>true</breakiterator>
          <verbose>false</verbose>
          <maxmemory>512m</maxmemory>
          <additionalJOption>
            -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
          </additionalJOption>
        </configuration>
      </plugin>
      <!-- FindBugs: mvn findbugs:findbugs -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>findbugs-maven-plugin</artifactId>
        <version>1.2</version>
        <configuration>
          <findbugsXmlOutput>true</findbugsXmlOutput>
          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
          <xmlOutput>true</xmlOutput>
        </configuration>
      </plugin>
      <!-- CheckStyle: mvn checkstyle:checkstyle -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <configuration>
          <outputFileFormat>xml</outputFileFormat>
        </configuration>
      </plugin>
      <!-- Cobertura: mvn cobertura:cobertura -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>cobertura-maven-plugin</artifactId>
        <configuration>
          <formats>
            <format>html</format>
            <format>xml</format>
          </formats>
        </configuration>
      </plugin>
    </plugins>
  </reporting>

</project>
